--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.example.chenchen.baseapp"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,7 +24,21 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.+'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+//    compile 'com.esri.arcgisruntime:arcgis-android:100.1.0'
+//    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+//    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+//    compile 'io.reactivex:rxjava:1.1.2'
+//    compile 'io.reactivex:rxandroid:1.1.0'
+//    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+//    compile 'com.jakewharton:butterknife:8.4.0'
+//    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.4'
+    compile 'com.beardedhen:androidbootstrap:2.3.2'
+    //
+    compile 'com.android.support:gridlayout-v7:26+'
     testCompile 'junit:junit:4.12'
 }
